--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <td><img src="imagens\fotinha-modified.png" alt="foto do Lucas"></td>
                 <td>
                     <h1>Lucas Sodré Farias</h1>
-                    <p><em>Cynical, Narcissistic, Egocentric <strong>with personality... <a href="https://www.instagram.com/farias.lsf/"> My IG profile</a></strong></em></p>
+                    <p><em>Cynical and Egocentric <strong>with personality... <a href="https://www.instagram.com/farias.lsf/"> My IG profile</a></strong></em></p>
                     <p>Im a Brazilian student, 16 years old, my birthday is in november 15th.
                         Love technology and everything about it, neve the less making a tech course on school, plans for the future ?
                         Open a company that will be focused in technology and make the world a better place with my contribuitions.</p>
